// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Talk/TalkEditor TextInput play-test 1`] = `
{
  "audioItems": {
    "00000000-0000-4000-0000-000000000001": {
      "presetKey": undefined,
      "query": {
        "accentPhrases": [
          {
            "accent": 5,
            "moras": [
              {
                "consonant": "k",
                "consonantLength": 0.0220625,
                "pitch": 4.7734375,
                "text": "コ",
                "vowel": "o",
                "vowelLength": 0.1140625,
              },
              {
                "consonant": undefined,
                "consonantLength": undefined,
                "pitch": 3.609375,
                "text": "ン",
                "vowel": "N",
                "vowelLength": 0.08312499999999999,
              },
              {
                "consonant": "n",
                "consonantLength": 0.022625,
                "pitch": 4.75,
                "text": "ニ",
                "vowel": "i",
                "vowelLength": 0.10843749999999999,
              },
              {
                "consonant": "ch",
                "consonantLength": 0.0400625,
                "pitch": 4.0234375,
                "text": "チ",
                "vowel": "i",
                "vowelLength": 0.10843749999999999,
              },
              {
                "consonant": "h",
                "consonantLength": 0.0315,
                "pitch": 4.796875,
                "text": "ハ",
                "vowel": "a",
                "vowelLength": 0.1509375,
              },
            ],
            "pauseMora": {
              "pitch": 0,
              "text": "、",
              "vowel": "pau",
              "vowelLength": 0,
            },
          },
          {
            "accent": 2,
            "moras": [
              {
                "consonant": "k",
                "consonantLength": 0.0320625,
                "pitch": 4.7834375,
                "text": "コ",
                "vowel": "o",
                "vowelLength": 0.12406249999999999,
              },
              {
                "consonant": "r",
                "consonantLength": 0.033375,
                "pitch": 4.72875,
                "text": "レ",
                "vowel": "e",
                "vowelLength": 0.11468749999999998,
              },
              {
                "consonant": "h",
                "consonantLength": 0.0415,
                "pitch": 5.106875,
                "text": "ハ",
                "vowel": "a",
                "vowelLength": 0.1609375,
              },
            ],
          },
          {
            "accent": 2,
            "moras": [
              {
                "consonant": "t",
                "consonantLength": 0.04375,
                "pitch": 4.723125,
                "text": "テ",
                "vowel": "e",
                "vowelLength": 0.12468749999999999,
              },
              {
                "consonant": "s",
                "consonantLength": 0.0435625,
                "pitch": 4.7309375,
                "text": "ス",
                "vowel": "u",
                "vowelLength": 0.1396875,
              },
              {
                "consonant": "t",
                "consonantLength": 0.04375,
                "pitch": 5.023124999999999,
                "text": "ト",
                "vowel": "o",
                "vowelLength": 0.1340625,
              },
              {
                "consonant": "d",
                "consonantLength": 0.040749999999999995,
                "pitch": 4.848125,
                "text": "デ",
                "vowel": "e",
                "vowelLength": 0.12468749999999999,
              },
              {
                "consonant": "s",
                "consonantLength": 0.0535625,
                "pitch": 4.7309375,
                "text": "ス",
                "vowel": "u",
                "vowelLength": 0.18968749999999998,
              },
            ],
            "pauseMora": undefined,
          },
        ],
        "intonationScale": 1,
        "outputSamplingRate": 8000,
        "outputStereo": false,
        "pitchScale": 0,
        "postPhonemeLength": 0.1,
        "prePhonemeLength": 0.1,
        "speedScale": 1,
        "volumeScale": 1,
      },
      "text": "こんにちは、これはテストです。",
      "voice": {
        "engineId": "c7b58856-bd56-4aa1-afb7-b8415f824b06",
        "speakerId": "7ffcb7ce-00ec-4bdc-82cd-45a8889e43ff",
        "styleId": 0,
      },
    },
  },
  "audioKeys": [
    "00000000-0000-4000-0000-000000000001",
  ],
}
`;

exports[`components/Talk/TalkEditor TextPaste play-test 1`] = `
{
  "audioItems": {
    "00000000-0000-4000-0000-000000000001": {
      "presetKey": undefined,
      "query": {
        "accentPhrases": [
          {
            "accent": 4,
            "moras": [
              {
                "consonant": "k",
                "consonantLength": 0.0220625,
                "pitch": 4.7734375,
                "text": "カ",
                "vowel": "a",
                "vowelLength": 0.10093749999999999,
              },
              {
                "consonant": undefined,
                "consonantLength": undefined,
                "pitch": 3.609375,
                "text": "イ",
                "vowel": "i",
                "vowelLength": 0.10843749999999999,
              },
              {
                "consonant": "gy",
                "consonantLength": 0.044,
                "pitch": 3.859375,
                "text": "ギョ",
                "vowel": "o",
                "vowelLength": 0.1140625,
              },
              {
                "consonant": undefined,
                "consonantLength": undefined,
                "pitch": 3.609375,
                "text": "ウ",
                "vowel": "u",
                "vowelLength": 0.11968749999999999,
              },
              {
                "consonant": "d",
                "consonantLength": 0.03075,
                "pitch": 5.128125,
                "text": "デ",
                "vowel": "e",
                "vowelLength": 0.15468749999999998,
              },
            ],
          },
          {
            "accent": 4,
            "moras": [
              {
                "consonant": "k",
                "consonantLength": 0.0320625,
                "pitch": 4.7834375,
                "text": "カ",
                "vowel": "a",
                "vowelLength": 0.11093749999999998,
              },
              {
                "consonant": undefined,
                "consonantLength": undefined,
                "pitch": 3.619375,
                "text": "イ",
                "vowel": "i",
                "vowelLength": 0.11843749999999999,
              },
              {
                "consonant": "gy",
                "consonantLength": 0.054,
                "pitch": 3.869375,
                "text": "ギョ",
                "vowel": "o",
                "vowelLength": 0.12406249999999999,
              },
              {
                "consonant": undefined,
                "consonantLength": undefined,
                "pitch": 3.619375,
                "text": "ウ",
                "vowel": "u",
                "vowelLength": 0.1796875,
              },
            ],
            "pauseMora": undefined,
          },
        ],
        "intonationScale": 1,
        "outputSamplingRate": 8000,
        "outputStereo": false,
        "pitchScale": 0,
        "postPhonemeLength": 0.1,
        "prePhonemeLength": 0.1,
        "speedScale": 1,
        "volumeScale": 1,
      },
      "text": "改行で改行",
      "voice": {
        "engineId": "c7b58856-bd56-4aa1-afb7-b8415f824b06",
        "speakerId": "7ffcb7ce-00ec-4bdc-82cd-45a8889e43ff",
        "styleId": 0,
      },
    },
    "00000000-0000-4000-0000-000000000003": {
      "morphingInfo": undefined,
      "presetKey": undefined,
      "query": {
        "accentPhrases": [
          {
            "accent": 2,
            "moras": [
              {
                "consonant": "t",
                "consonantLength": 0.02375,
                "pitch": 4.703125,
                "text": "ト",
                "vowel": "o",
                "vowelLength": 0.1140625,
              },
              {
                "consonant": undefined,
                "consonantLength": undefined,
                "pitch": 3.609375,
                "text": "ウ",
                "vowel": "u",
                "vowelLength": 0.11968749999999999,
              },
              {
                "consonant": "t",
                "consonantLength": 0.02375,
                "pitch": 5.003125,
                "text": "テ",
                "vowel": "e",
                "vowelLength": 0.10468749999999999,
              },
              {
                "consonant": undefined,
                "consonantLength": undefined,
                "pitch": 3.609375,
                "text": "ン",
                "vowel": "N",
                "vowelLength": 0.08312499999999999,
              },
              {
                "consonant": "d",
                "consonantLength": 0.03075,
                "pitch": 4.828125,
                "text": "デ",
                "vowel": "e",
                "vowelLength": 0.15468749999999998,
              },
            ],
          },
          {
            "accent": 4,
            "moras": [
              {
                "consonant": "k",
                "consonantLength": 0.0320625,
                "pitch": 4.7834375,
                "text": "カ",
                "vowel": "a",
                "vowelLength": 0.11093749999999998,
              },
              {
                "consonant": undefined,
                "consonantLength": undefined,
                "pitch": 3.619375,
                "text": "イ",
                "vowel": "i",
                "vowelLength": 0.11843749999999999,
              },
              {
                "consonant": "gy",
                "consonantLength": 0.054,
                "pitch": 3.869375,
                "text": "ギョ",
                "vowel": "o",
                "vowelLength": 0.12406249999999999,
              },
              {
                "consonant": undefined,
                "consonantLength": undefined,
                "pitch": 3.619375,
                "text": "ウ",
                "vowel": "u",
                "vowelLength": 0.1796875,
              },
            ],
            "pauseMora": undefined,
          },
        ],
        "intonationScale": 1,
        "outputSamplingRate": 8000,
        "outputStereo": false,
        "pitchScale": 0,
        "postPhonemeLength": 0.1,
        "prePhonemeLength": 0.1,
        "speedScale": 1,
        "volumeScale": 1,
      },
      "text": "読点で改行。",
      "voice": {
        "engineId": "c7b58856-bd56-4aa1-afb7-b8415f824b06",
        "speakerId": "7ffcb7ce-00ec-4bdc-82cd-45a8889e43ff",
        "styleId": 0,
      },
    },
    "00000000-0000-4000-0000-000000000004": {
      "morphingInfo": undefined,
      "presetKey": undefined,
      "query": {
        "accentPhrases": [
          {
            "accent": 4,
            "moras": [
              {
                "consonant": "s",
                "consonantLength": 0.023562499999999997,
                "pitch": 4.7109375,
                "text": "サ",
                "vowel": "a",
                "vowelLength": 0.10093749999999999,
              },
              {
                "consonant": undefined,
                "consonantLength": undefined,
                "pitch": 3.609375,
                "text": "イ",
                "vowel": "i",
                "vowelLength": 0.10843749999999999,
              },
              {
                "consonant": "g",
                "consonantLength": 0.021312499999999998,
                "pitch": 4.8046875,
                "text": "ゴ",
                "vowel": "o",
                "vowelLength": 0.1140625,
              },
              {
                "consonant": "n",
                "consonantLength": 0.032625,
                "pitch": 4.75,
                "text": "ノ",
                "vowel": "o",
                "vowelLength": 0.1640625,
              },
            ],
          },
          {
            "accent": 2,
            "moras": [
              {
                "consonant": "t",
                "consonantLength": 0.03375,
                "pitch": 4.713125,
                "text": "ト",
                "vowel": "o",
                "vowelLength": 0.12406249999999999,
              },
              {
                "consonant": undefined,
                "consonantLength": undefined,
                "pitch": 3.619375,
                "text": "ウ",
                "vowel": "u",
                "vowelLength": 0.12968749999999998,
              },
              {
                "consonant": "t",
                "consonantLength": 0.03375,
                "pitch": 5.013125,
                "text": "テ",
                "vowel": "e",
                "vowelLength": 0.11468749999999998,
              },
              {
                "consonant": undefined,
                "consonantLength": undefined,
                "pitch": 3.619375,
                "text": "ン",
                "vowel": "N",
                "vowelLength": 0.09312499999999999,
              },
              {
                "consonant": "h",
                "consonantLength": 0.0415,
                "pitch": 4.806875,
                "text": "ハ",
                "vowel": "a",
                "vowelLength": 0.1609375,
              },
            ],
          },
          {
            "accent": 4,
            "moras": [
              {
                "consonant": "k",
                "consonantLength": 0.0420625,
                "pitch": 4.7934375,
                "text": "カ",
                "vowel": "a",
                "vowelLength": 0.12093749999999999,
              },
              {
                "consonant": undefined,
                "consonantLength": undefined,
                "pitch": 3.629375,
                "text": "イ",
                "vowel": "i",
                "vowelLength": 0.12843749999999998,
              },
              {
                "consonant": "gy",
                "consonantLength": 0.064,
                "pitch": 3.879375,
                "text": "ギョ",
                "vowel": "o",
                "vowelLength": 0.1340625,
              },
              {
                "consonant": undefined,
                "consonantLength": undefined,
                "pitch": 3.629375,
                "text": "ウ",
                "vowel": "u",
                "vowelLength": 0.1396875,
              },
              {
                "consonant": "sh",
                "consonantLength": 0.0630625,
                "pitch": 4.218437499999999,
                "text": "シ",
                "vowel": "i",
                "vowelLength": 0.12843749999999998,
              },
              {
                "consonant": "n",
                "consonantLength": 0.042624999999999996,
                "pitch": 4.77,
                "text": "ナ",
                "vowel": "a",
                "vowelLength": 0.12093749999999999,
              },
              {
                "consonant": undefined,
                "consonantLength": undefined,
                "pitch": 3.629375,
                "text": "イ",
                "vowel": "i",
                "vowelLength": 0.1784375,
              },
            ],
            "pauseMora": undefined,
          },
        ],
        "intonationScale": 1,
        "outputSamplingRate": 8000,
        "outputStereo": false,
        "pitchScale": 0,
        "postPhonemeLength": 0.1,
        "prePhonemeLength": 0.1,
        "speedScale": 1,
        "volumeScale": 1,
      },
      "text": "最後の読点は改行しない。",
      "voice": {
        "engineId": "c7b58856-bd56-4aa1-afb7-b8415f824b06",
        "speakerId": "7ffcb7ce-00ec-4bdc-82cd-45a8889e43ff",
        "styleId": 0,
      },
    },
  },
  "audioKeys": [
    "00000000-0000-4000-0000-000000000001",
    "00000000-0000-4000-0000-000000000003",
    "00000000-0000-4000-0000-000000000004",
  ],
}
`;
